--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bluebird": "^2.9.12",
     "body-parser": "^1.12.0",
     "config": "^1.11.0",
     "express": "^4.11.2",
