--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "./node_modules/nodemon/bin/nodemon.js --watch ./server server"
+    "dev": "./node_modules/nodemon/bin/nodemon.js --watch ./server server",
+    "start" : "node server"
   },
   "author": "",
   "license": "ISC",
@@ -29,6 +30,7 @@
     "gulp-sass": "^1.3.3",
     "gulp-streamify": "0.0.5",
     "gulp-uglify": "^1.1.0",
+    "node-sass": "^2.0.1",
     "nodemon": "^1.3.7",
     "reactify": "^1.0.0",
     "vinyl-source-stream": "^1.0.0",
