--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "./node_modules/nodemon/bin/nodemon.js --watch ./server server",
-    "start" : "node server"
+    "start": "node server"
   },
   "author": "",
   "license": "ISC",
@@ -21,7 +21,8 @@
     "passport-github": "^0.1.5",
     "q": "^1.1.2",
     "react": "^0.12.2",
-    "rethinkdb": "^1.16.0"
+    "rethinkdb": "^1.16.0",
+    "socket.io": "^1.3.4"
   },
   "devDependencies": {
     "browserify": "^8.1.3",
