--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "./node_modules/nodemon/bin/nodemon.js --watch ./server server",
-    "start": "node server"
+    "start": "node server",
+    "build": "./node_modules/gulp/bin/gulp.js",
+    "watch": "./node_modules/gulp/bin/gulp.js watch"
   },
   "author": "",
   "license": "ISC",
@@ -16,12 +18,14 @@
     "config": "^1.11.0",
     "express": "^4.11.2",
     "express-session": "^1.10.3",
+    "gulp": "^3.8.11",
     "lodash": "^3.2.0",
     "passport": "^0.2.1",
     "passport-github": "^0.1.5",
     "q": "^1.1.2",
     "react": "^0.12.2",
     "rethinkdb": "^1.16.0",
+    "rethinkdb-init": "0.0.2",
     "socket.io": "^1.3.4"
   },
   "devDependencies": {
@@ -31,7 +35,6 @@
     "gulp-sass": "^1.3.3",
     "gulp-streamify": "0.0.5",
     "gulp-uglify": "^1.1.0",
-    "node-sass": "^2.0.1",
     "nodemon": "^1.3.7",
     "reactify": "^1.0.0",
     "vinyl-source-stream": "^1.0.0",
